# mtool

./: .gitignore  .gitmodules  Cargo.toml  README.org  _my-tool  build.rs
cli/: Cargo.toml
cli/src/: app.rs  kbd.rs  keybind.rs  main.rs  opts.rs
cli/src/command/: mod.rs
cli/src/command/test/: mod.rs
cli/src/command/translate/: mod.rs  tencent.rs
cli/src/core/: mod.rs
cli/src/core/command/: cmder.rs  mdict.rs  mod.rs
cli/src/core/command/dict/: hjdict.rs
cli/src/core/config/: configer.rs  mod.rs
cli/src/core/evbus/: event.rs  mod.rs
cli/src/core/keybind/: kbd.rs  kbdispatcher.rs  kber.rs  kbnode.rs  mod.rs
cli/src/core/module/: mod.rs
cli/src/core/service/: mod.rs  server.rs  sysev.rs
cli/src/core/sysev/: mod.rs
cli/src/module/: mod.rs
cli/src/module/gshell/: mod.rs
cli/src/module/gterminal/: mod.rs  scene.rs  terminal.rs  wgpu.rs  window.rs
cli/src/module/gterminal/assets/: .gitattributes
cli/src/module/sysev/: mod.rs
cli/src/module/test/: mod.rs
cli/src/module/toast/: mod.rs
cli/src/module/translate/: google.rs  mod.rs  tencent.rs
core/: Cargo.toml
core/src/: app.rs  cli_op.rs  config.rs  lib.rs  observer.rs  opts.rs
crates/anki/: Cargo.toml
crates/anki/src/: lib.rs
crates/cloud-api/: Cargo.toml
crates/cloud-api/src/: lib.rs
crates/cloud-api/src/tencent/: api.rs  credential.rs  mod.rs  ocr.rs
crates/hjdict/: Cargo.toml
crates/hjdict/src/: api.rs  lib.rs  parser.rs
crates/magenda/: Cargo.toml
crates/magenda/src/: task.rs
crates/manki-api/: Cargo.toml
crates/manki-api/src/: api.rs  lib.rs  message.rs
crates/manki-api/src/action/: graphical.rs  mod.rs
crates/mapp/: Cargo.toml
crates/mapp/src/: app.rs  label.rs  lib.rs  module.rs  tracing.rs
crates/mapp/src/provider/: constructor.rs  injector.rs  mod.rs  option.rs  res.rs  take.rs
crates/mapp/src/schedule/: cond_load.rs  local_schedule.rs  mod.rs  once_task.rs  schedule.rs  task.rs
crates/mcloud-api/: Cargo.toml
crates/mcloud-api/src/: lib.rs
crates/mcloud-api/src/adobe/: mod.rs  pdf_structure.rs
crates/mcloud-api/src/google/translate/: page.rs
crates/mcloud-api/src/openai/: chat.rs  mod.rs  phind.rs
crates/mcloud-api/src/tencent/: api.rs  credential.rs  mod.rs  ocr.rs
crates/mcloud-api/src/tencent/translate/: mod.rs  text.rs
crates/mdict/: Cargo.toml
crates/mdict/src/: common.rs  content_block.rs  dict_meta.rs  key_block.rs  lib.rs  mdd.rs  mdict.rs  mdsearch.rs  mdx.rs  record_block.rs
crates/mdict/src/decode/: mod.rs
crates/mdict/src/decode/collins/: mod.rs  output.rs
crates/mdict/src/decode/hjdict/: api.rs  mod.rs  parser.rs
crates/mdict/src/decode/mdict/: common.rs  dict.rs  error.rs  key_block.rs  mod.rs  parser.rs  record_block.rs
crates/mdict/src/decode/mdx/: common.rs  content_block.rs  dict.rs  dict_meta.rs  key_block.rs  mod.rs  parser.rs  record_block.rs
crates/minject/: Cargo.toml
crates/minject/macro/: Cargo.toml
crates/minject/macro/src/: enum_params.rs  inject.rs  lib.rs  repeat.rs
crates/minject/src/: injectable.rs  lib.rs  provider.rs
crates/minject/src/container/: local.rs  mod.rs  sync.rs
crates/mkeybinding/: Cargo.toml
crates/mkeybinding/src/: kbd.rs  keybinding.rs  keydispatcher.rs  keymap.rs  lib.rs
crates/mproxy/: Cargo.toml  build.rs
crates/mproxy/src/: app.rs  lib.rs  main.rs  metrics.rs  stats.rs
crates/mproxy/src/admin/: mod.rs
crates/mproxy/src/config/: admin.rs  egress.rs  ingress.rs  mod.rs  routing.rs  tls.rs  transport.rs
crates/mproxy/src/config/protos/: mod.rs
crates/mproxy/src/io/: async_io.rs  mod.rs  timeout_io.rs
crates/mproxy/src/io/util/: copy.rs  copy_bidirectional.rs  mod.rs
crates/mproxy/src/net/: mod.rs
crates/mproxy/src/net/protocol/: direct.rs  http.rs  (+3 more)
crates/mproxy/src/netcfg/: interface.rs  mod.rs  routing.rs
crates/mproxy/src/proxy/: mod.rs  net_location.rs
crates/mproxy/src/router/: mod.rs
crates/msysev/: Cargo.toml
crates/msysev/src/: event.rs  keydef.rs  lib.rs  modifier_state.rs
crates/msysev/src/linux/: mod.rs
crates/msysev/src/windows/: event.rs  hook.rs  key.rs  mod.rs
crates/mtauri-sys/: Cargo.toml
crates/mtauri-sys/src/: event.rs  lib.rs  window.rs
crates/ocr/: Cargo.toml  build.rs
crates/ocr/screenshot/: .gitignore  CMakeLists.txt  main.c  main.cc  main.qml  message.cc  message.hpp  screenshot.cc  screenshot.hpp
crates/ocr/screenshot/qml/: main.qml
crates/ocr/screenshot/rust/: message.hpp  screen_image_provider.hpp
crates/ocr/screenshot/src/: message.cc  message.hpp  screen_image_provider.cc
crates/ocr/src/: app.rs  config.rs  convert.rs  lib.rs
crates/search/: Cargo.toml  build.rs
crates/search/qml/: main.qml
crates/search/src/: lib.rs  main.rs  search.rs
crates/sysev/: Cargo.toml
crates/sysev/src/: event.rs  event_bus.rs  keydef.rs  lib.rs  modifier_state.rs
crates/sysev/src/linux/: mod.rs
crates/sysev/src/windows/: hook.rs  key.rs  mod.rs
crates/translate/: Cargo.toml
crates/translate/src/: google.rs  lib.rs
mcli/: Cargo.toml
mcli/src/: daemon.rs  main.rs
mclient/: Cargo.toml
mclient/src/: app.rs  daemon.rs  main.rs  path.rs
modules/anynav/: Cargo.toml  anynav.manifest  build.rs  tauri.conf.json
modules/anynav/src/: lib.rs
modules/anynav/src/dict/: mod.rs
modules/anynav/webapp/: angular.json  package.json
modules/anynav/webapp/src/: index.html  styles.scss
modules/cmder/: Cargo.toml
modules/cmder/src/: cmder.rs  command.rs  help.rs  lib.rs  mdict.rs
modules/cmder/src/cmd/: help.rs  mod.rs
modules/config/: Cargo.toml
modules/config/src/: config.rs  lib.rs
modules/dict/: Cargo.toml
modules/dict/src/: cmd.rs  lib.rs  mdx.rs
mservice/: Cargo.toml
mservice/src/: lib.rs
mtool/: Cargo.toml  build.rs  tauri.conf.json
mtool/capabilities/: default.json
mtool/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/agenda/: mod.rs  service.rs  task.rs
service/src/agenda/operate/: mod.rs  shell_op.rs
service/src/agenda/trigger/: mod.rs  schedule.rs
srv/: Cargo.toml
srv/src/: app.rs  main.rs
srv/src/service/: agenda_service.rs  mod.rs
(+429 files in other folders)
