[workspace]

resolver = "2"

members = [
  "crates/manki-api",
  "crates/mapp",
  "crates/mcloud-api",
  "crates/mdict",
  "crates/minject",
  "crates/mkeybinding",
  "crates/msysev",
  "crates/mproxy",
  "crates/mllama-sys",

  "modules/mtool-core",
  "modules/mtool-system",
  "modules/mtool-cmder",
  "modules/mtool-dict",
  "modules/mtool-translate",
  "modules/mtool-interactive",
  "modules/mtool-wgui",
  "modules/mtool-wgui/wmain",
  "modules/mtool-proxy",
  "modules/mtool-toast",
  "modules/mtool-ai",
  "mtool",
]

[workspace.package]
version = "0.0.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2021"

[workspace.dependencies]
# tracing = "0.1"
# tracing-subscriber = "0.3"
# tracing-appender = "0.2"
# tokio = "1"
# tokio-stream = { version = "0.1" }
# async-recursion = "1.0.0"
# async-trait = "0.1"
# futures = "0.3"
# parking_lot = "0.12"
# thiserror = "1.0"
# anyhow = "1.0"
# clap = { version = "4", features = ["derive", "cargo"] }
# itertools = "0.10"
# tauri = "1"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# serde-error = "0.1"
# windows = "0.48"
# cfg-if = "0.1"
# reqwest = "0.11"
# once_cell = "1.9"
# regex = "1"
# nom = "7"
# dashmap = "5.4"
# notify-rust = { version = "4", default-features = false }

tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"

tokio = "*"
tokio-stream = "*"
async-recursion = "*"
async-trait = "*"
futures = "*"
parking_lot = "*"
thiserror = "*"
anyhow = "*"
tauri = "2.0.0-alpha.10"
tauri-build = "2.0.0-alpha.6"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-error = "*"
windows = "*"
itertools = "*"
cfg-if = "*"
reqwest = "*"
once_cell = "*"
send_wrapper = "*"
regex = "*"
nom = "*"
dashmap = "*"
clap = { version = "*", features = ["derive", "cargo"] }
toml = "*"
notify-rust = { version = "*", features = ["zbus"] }
fuzzy-matcher = "*"
yew = { version = "*", features = ["ssr"] }
yew-router = "*"
yew_icons = "*"
grass = { version = "*", features = ["macro", "nightly"] }
js-sys = "*"
web-sys = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "*"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev" }
