[workspace]

resolver = "2"

members = [
  "crates/manki-api",
  "crates/mapp",
  "crates/mcloud-api",
  "crates/mdict",
  "crates/minject",
  "crates/mkeybinding",
  "crates/msysev",
  "crates/mproxy",
  "crates/mllama-sys",

  "modules/mtool-core",
  "modules/mtool-system",
  "modules/mtool-cmder",
  "modules/mtool-dict",
  "modules/mtool-translate",
  "modules/mtool-interactive",
  "modules/mtool-wgui",
  "modules/mtool-wgui/wmain",
  "modules/mtool-storage",
  "modules/mtool-proxy",
  "modules/mtool-toast",
  "modules/mtool-ai",
  "modules/mtool-pdf",
  "mtool",
]

[workspace.package]
version = "0.0.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2021"

[workspace.dependencies]
tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"

tokio = "*"
tokio-stream = "*"
async-recursion = "*"
async-trait = "*"
futures = "*"
parking_lot = "*"
thiserror = "*"
anyhow = "*"
tauri = { version = "2.0.0-beta.2" }
tauri-build = "2.0.0-beta.1"
tauri-plugin = { version = "2.0.0-beta.1", features = ["build"] }
tauri-utils = { version = "2.0.0-beta.1", features = ["build"] }
serde = { version = "*", features = ["derive"] }
raw-window-handle = "0.6"
serde_with = "*"
serde_json = "*"
serde-error = "*"
windows = "0.52"
itertools = "*"
cfg-if = "*"
reqwest = "*"
once_cell = "*"
send_wrapper = "*"
regex = "*"
nom = "*"
dashmap = "*"
clap = { version = "*", features = ["derive", "cargo"] }
toml = "*"
notify-rust = { version = "*", features = ["zbus"] }
fuzzy-matcher = "*"
yew = { version = "*", features = ["ssr"] }
yew-router = "*"
yew_icons = "*"
grass = { version = "*", features = ["macro", "nightly"] }
html-escape = "*"
js-sys = "*"
web-sys = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "*"
ouroboros = "*"
pin-project = "*"
quick-xml = { version = "*", features = ["serialize"] }

sea-orm = { version = "*", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "*", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }


[patch.crates-io]
tauri = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
tauri-runtime = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
tauri-runtime-wry = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
tauri-build = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
tauri-plugin = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
tauri-utils = { git = "https://github.com/yydcnjjw/tauri.git", branch = "dev" }
wry = { git = "https://github.com/yydcnjjw/wry.git", branch = "dev" }

# tauri = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri" }
# tauri-runtime-wry = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-runtime-wry" }
# tauri-runtime = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-runtime" }
# tauri-plugin = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-plugin" }
# tauri-build = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-build" }
# tauri-utils = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-utils" }
# wry = { path = "/home/yydcnjjw/workspace/project/wry" }

# tauri-codegen = { path = "/home/yydcnjjw/workspace/project/tauri/core/tauri-codegen" }
