[package]
name = "mytool-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytool-core = { path = "../core" }
cloud-api = { path = "../crates/cloud-api" }
sysev = { path = "../crates/sysev" }

log = "*"
log4rs = "*"
enum_dispatch = "*"
tokio = { version = "*", features = ["full"] }
async-stream = "*"
futures = "*"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
async-trait = "*"
thiserror = "*"
anyhow = "*"
serde = "*"

nom = "7"
bitflags = "*"
crossterm = "*"
dirs = "*"

dialog = "*"
