[package]
name = "mytool-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytool-core = { path = "../core" }
cloud-api = { path = "../crates/cloud-api" }
sysev = { path = "../crates/sysev" }

log = "*"
log4rs = "*"
enum_dispatch = "*"
tokio = { version = "*", features = ["full"] }
async-stream = "*"
futures = "*"
clap = { version = "3.0.0-beta.4", features = ["derive"] }
async-trait = "*"
thiserror = "*"
anyhow = "*"
serde = "*"

nom = "7"
bitflags = "*"
crossterm = "*"
dirs = "*"

dialog = "*"
toml = "*"

iced_winit = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_wgpu = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["spirv"] }

notify-rust = "*"

[dev-dependencies]
tempfile = "*"
