[package]
name = "mytool-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "*"
enum_dispatch = "*"
tokio = { version = "*", features = ["full"] }
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
async-trait = "*"
thiserror = "*"
anyhow = "*"
serde = "*"
toml = "*"
