[package]
name = "mcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc = { path = "../../mrpc/mrpc" }
sysev-mod = { path = "../modules/sysev" }
config-mod = { path = "../modules/config" }
keybinding-mod = { path = "../modules/keybinding" }
cmder-mod = { path = "../modules/cmder" }
toast-mod = { path = "../modules/toast" }
translate-mod = { path = "../modules/translate" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
log4rs = "1.0"

dirs = "4.0"
