[package]
name = "mtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc = { path = "../../mrpc/mrpc" }
mtool-service = { path = "../mservice" }

sysev-mod = { path = "../modules/sysev", features = ["service"] }
config-mod = { path = "../modules/config", features = ["service"] }
keybinding-mod = { path = "../modules/keybinding", features = ["service"] }
cmder-mod = { path = "../modules/cmder", features = ["service"] }

toast-mod = { path = "../modules/toast" }
translate-mod = { path = "../modules/translate" }
dict-mod = { path = "../modules/dict" }
anynav-mod = { path = "../modules/anynav", default-features = false }

tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
log4rs = "1.0"

dirs = "4.0"

daemonize = "0.4"

clap = { version = "3.2", features = ["derive"] }

[features]
local = ["anynav-mod/custom-protocol"]
