[package]
name = "mtool-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc = { path = "../../mrpc/mrpc" }

sysev-mod = { path = "../modules/sysev" }
config-mod = { path = "../modules/config" }
keybinding-mod = { path = "../modules/keybinding" }
cmder-mod = { path = "../modules/cmder" }
