[package]
name = "mtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapp = { path = "../crates/mapp" }

mtool_core = { path = "../modules/mtool_core" }

mtool_system = { path = "../modules/mtool_system" }

mtool_cmder = { path = "../modules/mtool_cmder" }

mtool_toast = { path = "../modules/mtool_toast" }

mtool_translate = { path = "../modules/mtool_translate" }

mtool_dict = { path = "../modules/mtool_dict" }

mtool_anynav = { path = "../modules/mtool_anynav" }

[features]

