[package]
name = "mtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = [ "custom-protocol" ]
custom-protocol = [ "mtool-wgui/custom-protocol" ]
devtools = [ "mtool-wgui/devtools" ]

[dependencies]
mapp = { path = "../crates/mapp" }
mtool-core = { path = "../modules/mtool-core" }
mtool-system = { path = "../modules/mtool-system" }
mtool-wgui = { path = "../modules/mtool-wgui" }
mtool-cmder = { path = "../modules/mtool-cmder" }
mtool-translate = { path = "../modules/mtool-translate" }
mtool-dict = { path = "../modules/mtool-dict" }
mtool-interactive = { path = "../modules/mtool-interactive" }
mtool-proxy = { path = "../modules/mtool-proxy" }
mtool-toast = { path = "../modules/mtool-toast" }
mtool-ai = { path = "../modules/mtool-ai" }
mtool-pdf = { path = "../modules/mtool-pdf" }
mtool-storage = { path = "../modules/mtool-storage" }

tauri = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, features = ["codegen"] }
