[package]
name = "mytool-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytool-core = { path = "../core" }

log = "*"
pretty_env_logger = "*"
enum_dispatch = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
thiserror = "*"
anyhow = "*"
futures = { version = "*", default-features = false }
tarpc = { version = "*", features = ["tokio1"]}

cron = "*"
chrono = "*"
