[package]
name = "mytool-srv"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytool-core = { path = "../core" }
mytool-service = { path = "../service" }
agenda = { path = "../crates/agenda" }

log = "*"
pretty_env_logger = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
async-trait = "*"
thiserror = "*"
anyhow = "*"

toml = "*"
