[package]
name = "anki"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["full"]}
serde_json = "1.0.57"
serde = {version = "1.0.116", features = ["derive"]}
reqwest = {version = "0.10.8", features = ["json"]}