[package]
name = "anki"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hjdict = {path = "../hjdict"}
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
reqwest = {version = "*", features = ["json"]}
thiserror = "*"
