[package]
name = "cloud-api"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hex = "*"
base64 = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
chrono = "*"
rust-crypto = "*"
