[package]
name = "hjdict"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features = ["json"]}
soup = "*"
html5ever = "0.22"              # To be compatible with clap
colored = "*"
regex = "*"
thiserror = "*"
