[package]
name = "hjdict"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["full"]}
reqwest = {version = "0.10.8", features = ["json"]}
soup = "0.5.0"
html5ever = "0.22"
colored = "2.0.0"
regex = "1.3.9"