[package]
name = "magenda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "*"

tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["sync"] }
futures = { version = "*", default-features = false }
async-trait = "*"

serde = { version = "*", features = ["derive"] }
toml = "*"

cron = "*"
chrono = "*"

log = "*"
pretty_env_logger = "*"

enum_dispatch = "*"
