[package]
name = "manki-api"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"

reqwest = {version = "*", features = ["json"]}
thiserror = "1.0"
anyhow = "1.0"


[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
