[package]
name = "manki-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

serde_repr = "0.1"

[dev-dependencies]
tokio = { workspace = true }

