[package]
name = "mapp"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minject = { path = "../minject" }

thiserror = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-recursion = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

petgraph = "0.6"
ringbuf = "0.3"
rand = "0.8"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
getrandom = { version = "0.2", features = ["js"] }
tracing-web = "0.1"

[dev-dependencies]
tokio = { workspace = true }
