[package]
name = "mcloud-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

hex = "0.4"
base64 = "0.13"
chrono = "0.4"
digest = "0.10"
hmac = "0.12"
sha2 = "0.10"
