[package]
name = "mcloud-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

hex = "*"
base64 = "*"
chrono = "*"
digest = "*"
hmac = "*"
sha2 = "*"
eventsource-stream = "*"
