[package]
name = "mcloud-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "stream"] }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

hex = "0.4"
base64 = "0.13"
chrono = "0.4"
digest = "0.10"
hmac = "0.12"
sha2 = "0.10"
# zip = "*"

[dev-dependencies]
test-log = { version = "*", features = ["trace"] }
env_logger = "*"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
