[package]
name = "mdict"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
nom = { workspace = true }

flate2 = "1.0"
minilzo-rs = "*"
ripemd128 = "0.1"
byteorder = "1.4"
quick-xml = { version = "*", features = ["serialize"] }
multimap = "0.8.3"
scraper = "0.12"
selectors = "0.22"
