[package]
name = "mkeybinding"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msysev = { path = "../msysev" }

tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }

lazy_static = "1.4.0"
