[package]
name = "mproxy"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
telemetry = [
  "opentelemetry",
  "opentelemetry-jaeger",
  "tracing-opentelemetry",
  "opentelemetry-prometheus",
  "prometheus"
]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }

opentelemetry = { version = "0.18", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.18", features = ["metrics"], optional = true }
opentelemetry-prometheus = { version = "0.11", optional = true }
prometheus = { version = "0.13", optional = true }
libc = "0.2"
nix = "0.26"
neli = { git = "https://github.com/jbaublitz/neli" }
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
bytes = "1.4"
toml = "0.4"
strum = { version = "0.24", features = ["derive"] }
enum_dispatch = "0.3"
domain_matcher = { git = "https://github.com/Qv2ray/DomainMatcher" }
protobuf = "3"
warp = "0.3"

[build-dependencies]
protobuf-codegen = "3"

[dev-dependencies]
tracing-test = "0.2"
