[package]
name = "mproxy"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
telemetry = [
  "opentelemetry",
  "opentelemetry-jaeger",
  "tracing-opentelemetry",
  "opentelemetry-prometheus",
  "prometheus"
]

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }

opentelemetry = { version = "0.18", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.18", features = ["metrics"], optional = true }
opentelemetry-prometheus = { version = "0.11", optional = true }
prometheus = { version = "0.13", optional = true }
libc = "*"
quinn = "*"
rustls = { version = "0.20.8", features = ["quic"] }
rustls-pemfile = "*"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
strum = { version = "*", features = ["derive"] }
enum_dispatch = "*"
domain_matcher = { git = "https://github.com/Qv2ray/DomainMatcher" }
protobuf = "*"
warp = "*"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "*"
neli = { git = "https://github.com/jbaublitz/neli" }

[build-dependencies]
protobuf-codegen = "3"

[dev-dependencies]
tracing-test = "0.2"
