[package]
name = "msysev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1", default_features = false }
anyhow = "1.0"
thiserror = "1.0"

bitflags = "1.3"
once_cell = "1.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2", features = ["xlib", "xrecord"]}
xproto = "2"

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.29"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
]
