[package]
name = "msysev"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

bitflags = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2", features = ["xlib", "xrecord"]}
xproto = "2"

[target.'cfg(target_os = "windows")'.dependencies]
[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
]
