[package]
name = "mtauri-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
workspace = "../../modules/mtool-wgui/wmain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
tracing = { workspace = true }
