[package]
name = "ocr"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "*"
cloud-api = { path = "../cloud-api" }
tokio = { version = "*", features = ["full"] }


[build-dependencies]
cmake = "*"
cxx-build = "*"
