[package]
name = "ocr"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-api = { path = "../cloud-api" }
cxx = "*"
tokio = { version = "*", features = ["full"] }
arboard = "*"

cpp_core = "*"
qt_core = "*"
qt_qml = "*"
qt_gui = "*"

[build-dependencies]
cmake = "*"
cxx-build = "*"
qt_ritual_build = "*"
