[package]
name = "search"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "*"
qt_core = "*"
qt_gui = "*"
qt_widgets = "*"
rusqlite = {version = "*", features = ["bundled"]}

[build-dependencies]
qt_ritual_build = "*"

# [[bin]]
# name = "search"
# path ="src/main.rs"
# test = false
# bench = false

