[package]
name = "sysev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"], optional=true}
thiserror = "*"
anyhow = "*"
bitflags = "*"


[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "*", features = ["xlib", "xrecord"]}
xproto = "*"

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
