[package]
name = "sysev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
serde = {version = "*", features = ["derive"], optional=true}
tokio = {version = "*", features = ["full"]}
thiserror = "*"
anyhow = "*"
bitflags = "*"
once_cell = "*"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "*", features = ["xlib", "xrecord"]}
xproto = "*"

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
