[package]
name = "translate"
version = "0.1.0"
authors = ["jiangjw <jiangjw@koal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = {version = "*", features = ["derive"]}
reqwest = {version = "*", features = ["json"]}
regex = "*"
thiserror = "*"
tokio = {version = "*", features = ["full"]}
